refined logic in incompatibility services